--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".minigame.MinigameActivity"
+            android:label="Whack-A-Mole"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
