--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.Tamagotchi"
         tools:targetApi="31">
         <activity
-            android:name=".signup"
-            android:exported="false" />
+            android:name=".SignUpActivity"
+             />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
